添加商品评论

--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -58,11 +58,12 @@ img {
 
 ul {
   list-style: none;
+  margin-bottom: none !important;
 }
 
 #app {
   background: #f5f5f5;
-  user-select: none;
+  user-select: none !important;
 }
 
 .container {
